--- a/ThatsAWrap/backend/templates/home.html
+++ b/ThatsAWrap/backend/templates/home.html
@@ -33,8 +33,7 @@
 </head>
 <body>
     <div class="title">That's A Wrap</div>
-        <button class="connect-button" onclick="connectSpotify()">Connect to Spotify</button>
-</body>
+    <a href="{{ url_for('spotify.authorize') }}"><button>Connect to Spotify</button></a>
 </html>
 {% endblock %}
 
